--- a/Manifest.json
+++ b/Manifest.json
@@ -1,9 +1,13 @@
 {
-  "name": "World Clock",
-  "version": "1.0",
-  "description": "World Clock showing Time of 12 countries",
-  "browser_action": {
-    "default_icon": "clock.ico",
-    "popup": "clock.html"
-  }
+  "name": "JS-ECF",
+  "description": "ECF via JS.",
+  "version": "0.1",
+  "app": {
+    "background": {
+      "scripts": ["js/background.js"]
+    }
+  },
+  "permissions": [
+      "serial"
+  ]
 }
