--- a/Manifest.json
+++ b/Manifest.json
@@ -8,6 +8,9 @@
     }
   },
   "permissions": [
-      "serial"
+      "serial",
+      "http://*/",
+      "http://192.168.0.10:28166/*/",
+      "http://localhost:28166/*/"
   ]
 }
