--- a/Manifest.json
+++ b/Manifest.json
@@ -12,6 +12,7 @@
       "http://*/",
       "http://192.168.0.10:28166/*/",
       "http://localhost:28166/*/",
-      "fullscreen"
+      "fullscreen",
+	  "unlimitedStorage"
   ]
 }
